--- a/demo/blenderImport/index.html
+++ b/demo/blenderImport/index.html
@@ -3,8 +3,14 @@
   <!-- Rewritten adaptation of the Three.js OBJLoader demo -->
 	<head>
 		<title>Three.js OBJLoader</title>
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+		<script src="javascript/three.min.js"></script>
+		<script src="javascript/OBJLoader.js"></script>
+		<script src="javascript/modelviewer.js"></script>
+
 		<style>
 			body {
 				font-family: Monospace;
@@ -16,105 +22,7 @@
 		</style>
 	</head>
 
-	<body>
-		<script src="javascript/three.min.js"></script>
-		<script src="javascript/OBJLoader.js"></script>
-
-		<script>
-			var container;
-			var camera, scene, renderer;
-			var mouseX = 0, mouseY = 0;
-			var windowHalfX = window.innerWidth / 2;
-			var windowHalfY = window.innerHeight / 2;
-
-			init();
-			animate();
-
-			function init() {
-				container = document.createElement( 'div' );
-				document.body.appendChild( container );
-
-				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 2000 );
-				camera.position.z = 5;
-
-				// scene
-				scene = new THREE.Scene();
-				var ambient = new THREE.AmbientLight( 0xFFFFFF );
-				scene.add( ambient );
-				var directionalLight = new THREE.DirectionalLight( 0xFFEEDD );
-				directionalLight.position.set( 0, 0, 1 );
-				scene.add( directionalLight );
-
-				// texture
-				var manager = new THREE.LoadingManager();
-				manager.onProgress = function ( item, loaded, total ) {
-					console.log( item, loaded, total );
-				};
-
-				var texture = new THREE.Texture();
-				var onProgress = function ( xhr ) {
-					if ( xhr.lengthComputable ) {
-						var percentComplete = xhr.loaded / xhr.total * 100;
-						console.log( Math.round(percentComplete, 2) + '% downloaded' );
-					}
-				};
-
-				var onError = function ( xhr ) {};
-
-				var loader = new THREE.ImageLoader( manager );
-				loader.load( 'models/giraffe.png', function ( image ) {
-					texture.image = image;
-					texture.needsUpdate = true;
-				} );
-
-				// model
-				var loader = new THREE.OBJLoader( manager );
-				loader.load( 'models/giraffe.obj', function ( object ) {
-					object.traverse( function ( child ) {
-						if ( child instanceof THREE.Mesh ) {
-							child.material.map = texture;
-						}
-					} );
-					scene.add( object );
-				}, onProgress, onError );
-
-				//
-				renderer = new THREE.WebGLRenderer();
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				container.appendChild( renderer.domElement );
-				document.addEventListener( 'mousemove', onDocumentMouseMove, false );
-
-				//
-				window.addEventListener( 'resize', onWindowResize, false );
-			}
-
-			function onWindowResize() {
-				windowHalfX = window.innerWidth / 2;
-				windowHalfY = window.innerHeight / 2;
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
-				renderer.setSize( window.innerWidth, window.innerHeight );
-			}
-
-			function onDocumentMouseMove( event ) {
-				mouseX = ( event.clientX - windowHalfX ) / 2;
-				mouseY = ( event.clientY - windowHalfY ) / 2;
-			}
-
-			//
-			function animate() {
-				requestAnimationFrame( animate );
-				render();
-			}
-
-			function render() {
-				camera.position.x += ( mouseX - camera.position.x ) * .05;
-				camera.position.y += ( - mouseY - camera.position.y ) * .05;
-				camera.lookAt( scene.position );
-				renderer.render( scene, camera );
-			}
-		</script>
+	<body onLoad="init();">
 
 	</body>
 </html>
