Fixing cityscape camera controls

--- a/demo/cityscape/index.html
+++ b/demo/cityscape/index.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
 		<script src="javascript/three.min.js"></script>
+		<script src="javascript/FirstPersonControls.js"></script>
 		<script src="javascript/cityscape.js"></script>
 
 		<style>
