--- a/demo/terrainGeneration/index.html
+++ b/demo/terrainGeneration/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <!-- Procedural city generation demo based on "Game Development with Threejs" -->
 	<head>
-		<title>Three.js Minecraft Terrain Demo</title>
+		<title>Three.js Procedural Terrain Demo</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
